# RogueAudio

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  vite.config.js
docs/: ARCHITECTURE.md  DEV_STEAM_DECK.md  PROJECT_STRUCTURE.md
scripts/: dev-tauri.sh
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs  media_server.rs  user_collections.rs
src-tauri/src/commands/: covers.rs  downloads.rs  mod.rs  plex.rs  progress.rs  user_collections.rs
src-tauri/src/covers/: mod.rs
src-tauri/src/downloads/: mod.rs
src-tauri/src/plex/: auth.rs  authors.rs  book.rs  client.rs  identity.rs  mod.rs  models.rs  playback.rs  server.rs  timeline.rs
src-tauri/src/storage/: config.rs  mod.rs
src/lib/: authors.ts  chapterProgress.ts  covers.ts  installed.ts  nav.ts  sort.ts
src/lib/api/: covers.ts  downloads.ts  plex.ts  progress.ts  userCollections.ts
src/lib/audio/: engine.ts
src/lib/components/auth/: PlexLogin.svelte
src/lib/components/book/: BookView.svelte
src/lib/components/collections/: AddToCollectionModal.svelte
src/lib/components/layout/: AppShell.svelte  SideNav.svelte
src/lib/plex/: libraries.ts
src/lib/stores/: auth.ts  bookDetail.ts  downloads.ts  library.ts  navBusy.ts  player.ts  settings.ts  userCollections.ts
src/lib/types/: downloads.ts  models.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/auth/: +page.svelte
src/routes/collections/: +page.svelte
src/routes/downloads/: +page.svelte
src/routes/settings/: +page.svelte
(+9 files in other folders)
