[package]
name = "rogue-audio"
version = "0.1.0"
description = "RogueAudio — open-source Plex audiobook client for Linux & Steam Deck"
authors = ["RogueAudio Contributors"]
edition = "2021"
license = "MIT"

[lib]
name = "rogue_audio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "json", "rustls"] }
